feat: add Ring Intercom event history
